--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
         <meta name="viewport" content="width=device-widht, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/png" href="img/SNAKE.png"/>
         <script defer src="script.js"></script>
         <title>Snake Game</title>
     </head>
     <body>
+        <div class="container">
+        <img class="snake" src="img/SNAKE.png" alt="Snake">
         <h1 class="titulo">Snake Game</h1>
+        <img class="snake" src="img/SNAKE2.png" alt="Snake">
+        </div>
         <canvas id="snake" width="512" height="512"></canvas>
     </body>
 </html>
